Added Forma Pilates and Hair projects with local images

--- a/index.html
+++ b/index.html
@@ -124,10 +124,54 @@
         <section id="projects" class="py-10">
             <h2 class="text-xs uppercase text-zinc-600 font-bold tracking-widest mb-10">Featured Case Studies</h2>
             <div class="space-y-12">
-                <!-- Case Study 1 -->
+                
+                <!-- NEW PROJECT 1: Forma Pilates -->
                 <div class="group stagger-reveal">
-                    <div class="mb-6 overflow-hidden rounded-[2rem] h-[50vh] bg-zinc-900 flex items-center justify-center">
-                        <span class="text-zinc-800 font-bold text-4xl">TOMESPA</span>
+                    <div class="mb-6 overflow-hidden rounded-[2rem] h-[50vh] bg-zinc-900 relative">
+                        <!-- LINKING TO LOCAL IMAGE: ./image/forma.jpg -->
+                        <img 
+                            src="./image/forma.jpg" 
+                            alt="Forma Pilates" 
+                            class="w-full h-full object-cover opacity-80 group-hover:scale-105 group-hover:opacity-100 transition-all duration-700"
+                        >
+                    </div>
+                    <div class="flex justify-between items-end">
+                        <div>
+                            <h4 class="text-4xl font-bold mb-2 tracking-tighter">Forma Pilates</h4>
+                            <p class="text-zinc-500 text-sm">Studio Platform & Management</p>
+                        </div>
+                        <a href="https://forma-website.up.railway.app/" target="_blank" class="w-12 h-12 rounded-full border border-zinc-800 flex items-center justify-center hover:bg-white hover:text-black transition">↗</a>
+                    </div>
+                </div>
+
+                <!-- NEW PROJECT 2: Hair But Private -->
+                <div class="group stagger-reveal">
+                    <div class="mb-6 overflow-hidden rounded-[2rem] h-[50vh] bg-zinc-900 relative">
+                        <!-- LINKING TO LOCAL IMAGE: ./image/hair.jpg -->
+                        <img 
+                            src="./image/hair.jpg" 
+                            alt="Hair But Private" 
+                            class="w-full h-full object-cover opacity-80 group-hover:scale-105 group-hover:opacity-100 transition-all duration-700"
+                        >
+                    </div>
+                    <div class="flex justify-between items-end">
+                        <div>
+                            <h4 class="text-4xl font-bold mb-2 tracking-tighter">Hair But Private</h4>
+                            <p class="text-zinc-500 text-sm">Exclusive Salon Experience</p>
+                        </div>
+                        <a href="#" target="_blank" class="w-12 h-12 rounded-full border border-zinc-800 flex items-center justify-center hover:bg-white hover:text-black transition">↗</a>
+                    </div>
+                </div>
+
+                <!-- Case Study 3: TomeSpa -->
+                <div class="group stagger-reveal">
+                    <div class="mb-6 overflow-hidden rounded-[2rem] h-[50vh] bg-zinc-900 relative">
+                        <!-- LINKING TO LOCAL IMAGE: ./image/tome.jpg -->
+                        <img 
+                            src="./image/tome.jpg" 
+                            alt="TomeSpa" 
+                            class="w-full h-full object-cover opacity-80 group-hover:scale-105 group-hover:opacity-100 transition-all duration-700"
+                        >
                     </div>
                     <div class="flex justify-between items-end">
                         <div>
@@ -138,10 +182,15 @@
                     </div>
                 </div>
 
-                <!-- Case Study 2 -->
+                <!-- Case Study 4: BeColor -->
                 <div class="group stagger-reveal">
-                    <div class="mb-6 overflow-hidden rounded-[2rem] h-[50vh] bg-zinc-900 flex items-center justify-center">
-                        <span class="text-zinc-800 font-bold text-4xl">BECOLOR</span>
+                    <div class="mb-6 overflow-hidden rounded-[2rem] h-[50vh] bg-zinc-900 relative">
+                        <!-- LINKING TO LOCAL IMAGE: ./image/becolor.jpg -->
+                        <img 
+                            src="./image/becolor.jpg" 
+                            alt="BeColor" 
+                            class="w-full h-full object-cover opacity-80 group-hover:scale-105 group-hover:opacity-100 transition-all duration-700"
+                        >
                     </div>
                     <div class="flex justify-between items-end">
                         <div>
@@ -151,6 +200,7 @@
                         <a href="https://becolor-rabat.com" target="_blank" class="w-12 h-12 rounded-full border border-zinc-800 flex items-center justify-center hover:bg-white hover:text-black transition">↗</a>
                     </div>
                 </div>
+
             </div>
         </section>
 
